(library
 (name lib)
 (synopsis "Coq's Utility Library [coq-specific]")
 (public_name coq-core.lib)
 (wrapped false)
 (modules_without_implementation xml_datatype)
 (libraries
  coq-core.boot coq-core.clib coq-core.config
  (select noncritical.ml from
   (!memprof-limits -> noncritical.std.ml)
   (memprof-limits -> noncritical.memprof.ml))
  (select instr.ml from
   (!coqperf -> instr.noperf.ml)
   (coqperf -> instr.perf.ml))))
